--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,16 +1,16 @@
 {
   "packageDirectories" : [ {
-    "path" : "Userstory2",
-    "default" : true,
-    "package" : "Userstory2",
-    "versionName" : "Userstory2",
-    "versionNumber" : "1.0.0.0"
-  }, {
     "path" : "ModuleT1",
     "default" : false,
     "package" : "ModuleT1",
     "versionName" : "ModuleT1",
     "versionNumber" : "1.0.0.3"
+  }, {
+    "path" : "Userstory2",
+    "default" : true,
+    "package" : "Userstory2",
+    "versionName" : "Userstory2",
+    "versionNumber" : "1.0.0.2"
   } ],
   "namespace" : "",
   "sfdcLoginUrl" : "https://login.salesforce.com",
@@ -20,6 +20,7 @@
     "ModuleT1@1.0.0.0" : "04t3i000001ExWWAA0",
     "ModuleT1@1.0.0.3" : "04t3i000001Exn7AAC",
     "Userstory2" : "0Ho3i000000fxUHCAY",
-    "Userstory2@1.0.0.0" : "04t3i000001FYCYAA4"
+    "Userstory2@1.0.0.0" : "04t3i000001FYCYAA4",
+    "Userstory2@1.0.0.2" : "04t3i000001FYfhAAG"
   }
 }
