--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,10 +1,16 @@
 {
   "packageDirectories" : [ {
     "path" : "ModuleT1",
-    "default" : true,
+    "default" : false,
     "package" : "ModuleT1",
     "versionName" : "ModuleT1",
     "versionNumber" : "1.0.0.3"
+  }, {
+    "path" : "FreddieMacDXUS1",
+    "default" : true,
+    "package" : "FreddieMacDXUS1",
+    "versionName" : "FreddieMacDXUS1",
+    "versionNumber" : "1.0.0.0"
   } ],
   "namespace" : "",
   "sfdcLoginUrl" : "https://login.salesforce.com",
@@ -12,6 +18,8 @@
   "packageAliases" : {
     "ModuleT1" : "0Ho3i000000fxUCCAY",
     "ModuleT1@1.0.0.0" : "04t3i000001ExWWAA0",
-    "ModuleT1@1.0.0.3" : "04t3i000001Exn7AAC"
+    "ModuleT1@1.0.0.3" : "04t3i000001Exn7AAC",
+    "FreddieMacDXUS1" : "0Ho3i000000fxUbCAI",
+    "FreddieMacDXUS1@1.0.0.0" : "04t3i000001FjfTAAS"
   }
 }
