--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,16 +1,22 @@
 {
   "packageDirectories" : [ {
+    "path" : "Aug16T1",
+    "default" : true,
+    "package" : "Aug16T1",
+    "versionName" : "Aug16T1",
+    "versionNumber" : "1.0.0.0"
+  }, {
+    "path" : "Userstory2",
+    "default" : false,
+    "package" : "Userstory2",
+    "versionName" : "Userstory2",
+    "versionNumber" : "1.0.0.2"
+  }, {
     "path" : "ModuleT1",
     "default" : false,
     "package" : "ModuleT1",
     "versionName" : "ModuleT1",
     "versionNumber" : "1.0.0.3"
-  }, {
-    "path" : "Userstory2",
-    "default" : true,
-    "package" : "Userstory2",
-    "versionName" : "Userstory2",
-    "versionNumber" : "1.0.0.2"
   } ],
   "namespace" : "",
   "sfdcLoginUrl" : "https://login.salesforce.com",
@@ -21,6 +27,8 @@
     "ModuleT1@1.0.0.3" : "04t3i000001Exn7AAC",
     "Userstory2" : "0Ho3i000000fxUHCAY",
     "Userstory2@1.0.0.0" : "04t3i000001FYCYAA4",
-    "Userstory2@1.0.0.2" : "04t3i000001FYfhAAG"
+    "Userstory2@1.0.0.2" : "04t3i000001FYfhAAG",
+    "Aug16T1" : "0Ho3i000000fxWmCAI",
+    "Aug16T1@1.0.0.0" : "04t3i0000027iCOAAY"
   }
 }
